fixed twitch cropped image

--- a/src/components/Footer/FooterStyles.css
+++ b/src/components/Footer/FooterStyles.css
@@ -36,15 +36,15 @@
   background-color: tomato;
 }
 .social-media {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
 }
 
 @media only screen and (min-width: 721px) {
 .social-media {
   display: flex;
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
 }
 .LogoIcon {
   height: 40px;
